--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
             </div>
             <!-- program photos -->
-            <div class="mt-12  grid gap-3 grid-cols-1 lg:grid-cols-2">
+            <div class="mt-12  grid gap-3 grid-cols-1 lg:grid-cols-2 h-[844px] lg:h-[960px]">
                 <!-- first photo -->
                 <div class="text-start justify-center mx-auto relative rounded-2xl ">
                     <img src="./images/2.png" alt="">
